# frei0r-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  tag.yml
examples/: color.rs  shift.rs
frei0r-example/: Cargo.toml
frei0r-example/src/: lib.rs
frei0r-macros/: Cargo.toml
frei0r-macros/src/: lib.rs
frei0r-rs/: Cargo.toml
frei0r-rs/examples/: color.rs  shift.rs
frei0r-rs/src/: ffi.rs  lib.rs
frei0r-sys/: Cargo.toml  bindings.rs  build.rs  frei0r.h
src/: ffi.rs  lib.rs  param.rs
