[package]
name = "frei0r-rs"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/kenkinming2002/frei0r-rs"
description = "Rust bindings to the frei0r plugin API"

[[example]]
name = "shift"
crate-type = ["cdylib"]

[dependencies]
frei0r-macros = { version = "0.1.0", path = "../frei0r-macros" }
frei0r-sys = { version = "0.1.0", path = "../frei0r-sys" }
