[package]
name = "frei0r-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/kenkinming2002/frei0r-rs"
description = "Rust bindings to the frei0r plugin API"

[[example]]
name = "shift"
crate-type = ["cdylib"]

[[example]]
name = "color"
crate-type = ["cdylib"]

[dependencies]
frei0r-macros = { path = "../frei0r-macros" }
frei0r-sys = { path = "../frei0r-sys" }
